force-app/main/default/objects/Account/fields/LPCR_SIREN__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SIREN__c</fullName>
    <label>SIREN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>