force-app/main/default/objects/Account/fields/LPCR_SIRETChorus__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SIRETChorus__c</fullName>
    <label>SIRET Chorus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>