force-app/main/default/objects/Account/fields/LPCR_SocieteFacturanteCompte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteFacturanteCompte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Société Facturante</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Comptes (Société Facturante)</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>