force-app/main/default/objects/Account/fields/LPCR_Solde__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Solde__c</fullName>
    <label>Solde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>