force-app/main/default/objects/Account/fields/LPCR_SourceMigration__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SourceMigration__c</fullName>
    <label>Source Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFV1</fullName>
            </value>
            <value>
                <fullName>Intranet</fullName>
            </value>
            <value>
                <fullName>Lead Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>