force-app/main/default/objects/Account/fields/LPCR_Statut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Ancien client</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Ex-adhérent</fullName>
            </value>
            <value>
                <fullName>Fournisseur</fullName>
            </value>
            <value>
                <fullName>Rachat LPCR</fullName>
            </value>
            <value>
                <fullName>Ne souhaite pas adhérer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>