force-app/main/default/objects/Account/fields/LPCR_StatutCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutCreche__c</fullName>
    <label>Statut crèche</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Projet</fullName>
            </value>
            <value>
                <fullName>Fournisseur</fullName>
            </value>
            <value>
                <fullName>Rachat concurrence</fullName>
            </value>
            <value>
                <fullName>Fermeture</fullName>
            </value>
            <value>
                <fullName>Désactivé</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Nspa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>