force-app/main/default/objects/Account/fields/LPCR_TauxEffort__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxEffort__c</fullName>
    <label>Taux d&apos;effort</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>