force-app/main/default/objects/Account/fields/LPCR_TelephoneSupplementaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TelephoneSupplementaire__c</fullName>
    <label>Téléphone Supplémentaire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>