force-app/main/default/objects/Account/fields/LPCR_TermeFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TermeFacturation__c</fullName>
    <label>Terme de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>A échoir</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Echu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>