force-app/main/default/objects/Account/fields/LPCR_Top100__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Top100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOP 100</label>
    <type>Checkbox</type>
</CustomField>