force-app/main/default/objects/Account/fields/LPCR_TravailConcurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TravailConcurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travaille avec la concurrence</label>
    <type>Checkbox</type>
</CustomField>