force-app/main/default/objects/Account/fields/LPCR_TypeClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeClient__c</fullName>
    <label>Type de client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grand Compte</fullName>
            </value>
            <value>
                <fullName>PME-ETI</fullName>
            </value>
            <value>
                <fullName>TPE</fullName>
            </value>
            <value>
                <fullName>PLAC</fullName>
            </value>
            <value>
                <fullName>Collectivité</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>