force-app/main/default/objects/Account/fields/LPCR_TypeContratPrincipal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeContratPrincipal__c</fullName>
    <label>Type de Contrat Principal
    </label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réservation</fullName>
            </value>
            <value>
                <fullName>Référencement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>