force-app/main/default/objects/Account/fields/LPCR_TypeCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche__c</fullName>
    <label>Type de crèche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALSH</fullName>
            </value>
            <value>
                <fullName>MAF</fullName>
            </value>
            <value>
                <fullName>MICRO</fullName>
            </value>
            <value>
                <fullName>MAC</fullName>
            </value>
            <value>
                <fullName>Halte-Garderie</fullName>
            </value>
            <value>
                <fullName>Jardin d’enfants</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>PAJE</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>