force-app/main/default/objects/Account/fields/LPCR_TypeEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeEntreprise__c</fullName>
    <label>Type de client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeEntreprise</valueSetName>
    </valueSet>
</CustomField>