force-app/main/default/objects/Account/fields/LPCR_TypeMensualisation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeMensualisation__c</fullName>
    <label>Type Mensualisation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>