force-app/main/default/objects/Account/fields/LPCR_TypeReconduction__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeReconduction__c</fullName>
    <label>Type de reconduction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expresse</fullName>
            </value>
            <value>
                <fullName>Tacite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>