force-app/main/default/objects/Account/fields/SBQQ__CoTermedContractsCombined__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
    <inlineHelpText>Activez pour combiner les ressources et les abonnements de plusieurs contrats à durée identique. Par défaut, chaque contrat à durée identique génère un groupe séparé dans un devis de renouvellement.</inlineHelpText>
    <label>Combine Co-Termed Contracts</label>
    <type>Checkbox</type>
</CustomField>