force-app/main/default/objects/Account/fields/SBQQ__DefaultOpportunity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DefaultOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
    <inlineHelpText>Opportunité par défaut de ce compte utilisée dans un module e-Commerce pour obtenir le prix catalogue du client et associer aux devis « panier d&apos;achat ».</inlineHelpText>
    <label>Default Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>WebAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>