force-app/main/default/objects/Account/fields/SBQQ__RenewalModel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalModel__c</fullName>
    <description>The option to distinguish between Subscription or Asset based renewal.</description>
    <inlineHelpText>Sélectionnez Basé sur les ressources pour générer les renouvellements en fonction des ressources d&apos;un compte ou Basé sur le contrat pour générer les renouvellements en fonction du contrat créé à partir d&apos;un devis.</inlineHelpText>
    <label>Renewal Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Based</fullName>
            </value>
            <value>
                <fullName>Contract Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>