force-app/main/default/objects/Account/fields/SBQQ__RenewalPricingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalPricingMethod__c</fullName>
    <description>Method for pricing products on renewal.</description>
    <inlineHelpText>Utilisez « Identique » pour conserver le dernier prix payé, « Catalogue » pour utiliser le prix catalogue actuel ou « Augmentation » pour utiliser le dernier prix payé avec une augmentation.</inlineHelpText>
    <label>Renewal Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
                <default>true</default>
                <label>Same</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>