force-app/main/default/objects/Account/fields/SBQQ__TaxExempt__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TaxExempt__c</fullName>
    <description>Selected if this account has active certificates</description>
    <inlineHelpText>Sélectionner si ce compte a des certificats actifs</inlineHelpText>
    <label>Tax-Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>