force-app/main/default/objects/Account/fields/SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIRET__c</fullName>
    <label>SIRET</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>