force-app/main/default/objects/Account/fields/Tech_DatePremiereOpportuniteGagnee__c.field-meta.xml
<CustomField>
    <fullName>Tech_DatePremiereOpportuniteGagnee__c</fullName>
    <description>date de la première opportunité gagnée. champ utilisé pour calculer les types d&apos;opportunités (new business, upsell, renouvellement)</description>
    <label>Tech_Date Premiere Opportunite Gagnee</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>