force-app/main/default/objects/Account/fields/Tech_NbOpportunitesGagnees__c.field-meta.xml
<CustomField>
    <fullName>Tech_NbOpportunitesGagnees__c</fullName>
    <description>sert au calcul du champ Type d&apos;opportunité (New Business ou Upsell, ou renouvellement).</description>
    <label>Tech_Nb opportunités gagnées</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>