force-app/main/default/objects/Account/recordTypes/Creche.recordType-meta.xml
<RecordType>
    <fullName>Creche</fullName>
    <active>true</active>
    <label>Crèche</label>
</RecordType>