force-app/main/default/objects/Account/recordTypes/Creche_Externe.recordType-meta.xml
<RecordType>
    <fullName>Creche_Externe</fullName>
    <active>true</active>
    <label>Crèche Externe</label>
</RecordType>