force-app/main/default/objects/Account/recordTypes/Entreprise.recordType-meta.xml
<RecordType>
    <fullName>Entreprise</fullName>
    <active>true</active>
    <label>Entreprise</label>
</RecordType>