force-app/main/default/objects/Account/recordTypes/Etablissement_LPCR.recordType-meta.xml
<RecordType>
    <fullName>Etablissement_LPCR</fullName>
    <active>true</active>
    <label>Etablissement LPCR</label>
</RecordType>