force-app/main/default/objects/Account/recordTypes/Famille.recordType-meta.xml
<RecordType>
    <fullName>Famille</fullName>
    <active>true</active>
    <label>Famille</label>
</RecordType>