force-app/main/default/objects/Account/recordTypes/ReseauLPCR.recordType-meta.xml
<RecordType>
    <fullName>ReseauLPCR</fullName>
    <active>true</active>
    <label>Réseau LPCR</label>
</RecordType>