force-app/main/default/objects/Account/validationRules/VR_Compte_Adresse_Representant1_Requise.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Compte_Adresse_Representant1_Requise</fullName>
    <active>true</active>
    <description>Si un contact est renseigné en tant que représentant 1 dans un compte famille alors il doit obligatoirement avoir une adresse pour la facturation</description>
    <errorConditionFormula>AND(
NOT( $User.LPCR_BypassValidationRules__c ),
RecordType.DeveloperName = &#39;Famille&#39;,
NOT(ISBLANK( LPCR_Representant1__c )),
ISBLANK(LPCR_Representant1__r.MailingAddress) )</errorConditionFormula>
    <errorDisplayField>LPCR_Representant1__c</errorDisplayField>
    <errorMessage>L&#39;adresse de facturation est obligatoire pour le représentant 1.</errorMessage>
</ValidationRule>