force-app/main/default/objects/Account/validationRules/VR_Compte_AutrePrestataire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Compte_AutrePrestataire</fullName>
    <active>true</active>
    <description>Renseigner le prestataire</description>
    <errorConditionFormula>AND(
ISPICKVAL(LPCR_PrestataireActuel__c ,&quot;Autre&quot;),
 ISBLANK( LPCR_AutrePrestataire__c )
)</errorConditionFormula>
    <errorDisplayField>LPCR_AutrePrestataire__c</errorDisplayField>
    <errorMessage>Veuillez renseigner le prestataire actuel</errorMessage>
</ValidationRule>