force-app/main/default/objects/Account/validationRules/VR_Compte_Champs_Chorus.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Compte_Champs_Chorus</fullName>
    <active>true</active>
    <description>Lorsqu’un compte Entreprise est marqué comme Public dans le champ “Public / Privé”, alors les champs SIRET Chorus et Code service Chorus sont obligatoires</description>
    <errorConditionFormula>AND(
NOT( $Permission.LPCR_ByPass_VR ),
RecordType.DeveloperName = &apos;Entreprise&apos;,
ISPICKVAL( LPCR_PrivePublic__c ,&apos;Public&apos;),
ISBLANK( LPCR_SIRETChorus__c ))</errorConditionFormula>
    <errorDisplayField>LPCR_SIRETChorus__c</errorDisplayField>
    <errorMessage>Pour les entreprises publiques, les champs SIRET Chorus est obligatoire.</errorMessage>
</ValidationRule>