force-app/main/default/objects/Account/validationRules/VR_Compte_CrecheExt_CodePays.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Compte_CrecheExt_CodePays</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(&quot;AF:ZA:AX:AL:DZ:DE:DD:AD:AO:AIAQ:AG:AN:SA:AR:AM:AW:AU:AT:AZ:BS:BH:BD:BB:BY:BE:BZ:BJ:BM:BT:BO:BQ:BA:BW:BV:BR:BN:BG:BF:BI:CV:KY:KH:CM:CA:CL:CN:CX:CY:CC:CO:KM:CG:CD:CK:KR:KP:CR:CI:HR:CU:CW:DK:DJ:DO:DM:EG:SV:AE:EC:ER:ES:EE:US:ET:FK:FO:FJ:FI:FR:GA:GM:GE:GS:GH:GI:GR:GD:GL:GP:GU:GT:GG:GN:GW:GQ:GY:GF:HT:HM:HN:HK:HU:IM:UM:VG:VI:IN:IO:ID:IR:IQ:IE:IS:IL:IT:JM:JP:JE:JO:KZ:KE:KG:KI:KW:LA:LS:LV:LB:LR:LY:LI:LT:LU:MO:MK:MG:MY:MW:MV:ML:MT:MP:MA:MH:MQ:MU:MR:YT:MX:FM:MD:MC:MN:ME:MS:MZ:MM:NA:NR:NP:NI:NE:NG:NU:NF:NO:NC:NZ:OM:UG:UZ:PK:PW:PS:PA:PG:PY:NL:XX:ZZ:PE:PH:PN:PL:PF:PR:PT:QA:SY:CF:RE:RO:GB:RU:RW:EH:BL:KN:SM:MF:SX:PM:VA:VC:SH:LC:SB:WS:AS:ST:SN:RS:SC:SL:SG:SK:SI:SO:SD:SS:LK:SE:CH:SR:SJ:SZ:TJ:TW:TZ:TD:CS:CZ:TF:TH:TL:TG:TK:TO:TT:TN:TM:TC:TR:TV:UA:SU:UY:VU&quot;,LPCR_CrecheCodePays__c))</errorConditionFormula>
    <errorDisplayField>LPCR_CrecheCodePays__c</errorDisplayField>
    <errorMessage>Le code pays doit respecter la norme ISO-3166 2</errorMessage>
</ValidationRule>