force-app/main/default/objects/Account/validationRules/VR_SiretVide_PasDeSiret.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SiretVide_PasDeSiret</fullName>
    <active>false</active>
    <description>Siret et pas de siret -&gt; impossible</description>
    <errorConditionFormula>AND(
NOT($Permission.LPCR_ByPass_VR),
!ISBLANK(LPCR_SIRET__c),
LPCR_PasDeSIRET__c
)</errorConditionFormula>
    <errorDisplayField>LPCR_PasDeSIRET__c</errorDisplayField>
    <errorMessage>Merci de décocher si un SIRET est renseigné.</errorMessage>
</ValidationRule>