force-app/main/default/objects/Account/listViews/ComptesCrechesExternes.listView-meta.xml
<ListView>
    <fullName>ComptesCrechesExternes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LPCR_TypeCreche__c</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Creche_Externe</value>
    </filters>
    <label>Comptes Crèches Externes</label>
</ListView>