force-app/main/default/objects/Account/listViews/ComptesLPCR.listView-meta.xml
<ListView>
    <fullName>ComptesLPCR</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Etablissement_LPCR,Account.ReseauLPCR</value>
    </filters>
    <label>Comptes LPCR</label>
</ListView>