force-app/main/default/objects/Account/listViews/Entreprises.listView-meta.xml
<ListView>
    <fullName>Entreprises</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LPCR_TypeEntreprise__c</columns>
    <columns>LPCR_Statut__c</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Entreprise</value>
    </filters>
    <label>Comptes Entreprises</label>
</ListView>