force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>LPCR_Statut__c</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>LPCR_Departement__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes comptes</label>
</ListView>