force-app/main/default/objects/Account/listViews/Tous_les_comptes.listView-meta.xml
<ListView>
    <fullName>Tous_les_comptes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Tous les comptes</label>
</ListView>